static/style.css
/* ... */
#nsfw_landing h1 {
    display: inline-block;
    margin-bottom: 20px;
    text-align: center;
    width: 100%;
}

#nsfw_landing p {
    display: inline-block;
    text-align: center;
    width: 100%;
}

#nsfw_landing a {
    color: var(--accent);
}

/* Mobile */

@media screen and (max-width: 800px) {
    main {
        flex-direction: column-reverse;
        padding: 10px;
        margin: 0 0 10px 0;
        max-width: 100%;
    }

    nav {
        display: grid;
        grid-template-areas: "logo links" "searchbox searchbox";
        padding: 5px 10px 0;
        width: calc(100% - 20px);
        margin: 0;
    }

    nav #links {
        margin-left: auto;
    }
    nav #links span {
        display: none;
    }
    nav #links svg {
        display: block;
    }

    #subscriptions {
        position: unset;
    }

    #sub_list {
        left: 10px;
        right: 10px;
        min-width: auto;
    }

    #settings {
        max-width: unset;
    }

    aside,
    #subreddit,
    #user {
        margin: 0;
        max-width: 100%;
    }
    .oldreddit aside {
        display: none;
    }
    #user { margin: 0 0 20px; }
    
    body.fixed_navbar {
        min-height: calc(100vh - 75px);
        padding-top: 45px;
        #subreddit { margin: 49px 0 0; }
        #user { margin: 49px 0 20px 0; }
        #settings { margin-top: 48px; }
        div.post.highlighted { margin-top: 49px; }
        main:not(:has(div + aside)) { #sort { margin-top: 49px; } }
        #column_one:has(div.post.highlighted + #commentQueryForms) { #sort { margin-top: 0 } }
    }

    #sidebar {
        margin: 20px 0;
    }
    #logo,
    #links {
        margin-bottom: 5px;
    }
    #searchbox {
        width: calc(100vw - 20px);
        margin-bottom: 10px;
    }
}

@media screen and (max-width: 580px) {
    #commentQueryForms {
        display: initial;
        justify-content: initial;
    }
}

@media screen and (max-width: 507px) {
    #version {
        display: none;
    }

    .post {
        grid-template:
            "post_header post_header post_thumbnail" auto
            "post_title  post_title  post_thumbnail" 1fr
            "post_media  post_media  post_thumbnail" auto
            "post_body   post_body   post_thumbnail" auto
            "post_poll   post_poll   post_thumbnail" auto
            "post_notification post_notification post_thumbnail" auto
            "post_score  post_footer post_thumbnail" auto
            / auto 1fr fit-content(min(20%, 152px));
    }

    .post_score {
        margin: 5px 0px 20px 15px;
        padding: 0;
    }

    .post_poll {
        padding: 5px 15px 10px 12px;
    }

    .compact .post_score {
        padding: 0;
    }

    .post_score::before {
        content: "↑";
    }

    .post_header {
        font-size: 14px;
    }
    .post_footer {
        margin-left: 15px;
    }

    .replies > .comment {
        margin-left: -12px;
        padding: 5px 0;
    }

    .comment_left {
        min-width: 16px;
        max-width: 16px;
        padding: 5px 0px;
        align-items: initial;
        margin-top: -5px;
    }

    .line {
        margin-left: 5px;
    }

    /* .thread { margin-left: -5px; } */
    .comment_right {
        padding: 5px 0 10px 2px;
    }
    .comment_author {
        margin-left: 12px;
    }
    .comment_data {
        margin-left: 12px;
    }

    .user-comment .comment_data {
        flex-direction: column;
        flex-wrap: wrap;
        row-gap: 5px;
    }

    .comment_data::marker {
        font-size: 25px;
    }
    .user-comment .comment_data > .comment_link {
        order: 2;
    }
    .user_comment_data_divider {
        order: 1;
    }

    .user_comment_data_divider .dot {
        display: unset;
        margin-left: 5px;
    }

    .created-in {
        display: none;
    }

    .comment_score {
        min-width: 34px;
        height: 20px;
        font-size: 12px;
        padding: 7px 0px;
        margin-right: -5px;
        align-content: center;
    }

    #post_links > li {
        margin-right: 10px;
    }
    .post_footer > p > span#upvoted {
        display: none;
    }

    .desktop_item {
        display: none;
    }
    .mobile_item {
        display: auto;
    }

    .popup {
        width: auto;
    }

    .popup-inner {
        max-width: 80%;
    }
}

.quality-selector {
    border: 2px var(--outside) solid;
    margin-top: 8px;
    float: right;
}

.quality-selector option {
    background-color: var(--background);
    color: var(--text);
}

.quality-selector option:hover {
    background-color: var(--accent);
    color: var(--text);
}

